fixed spacing on mobile

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -163,7 +163,7 @@ body {
     min-width: 200px;
     margin: 20px;
     height: auto;
-    display: flex;
+    display: block;
     justify-content: center;
     justify-items: center;
     align-content: center;
@@ -348,7 +348,7 @@ body {
         font-size: 10px;
     }
     .footer-container {
-        padding-bottom: 125px;
+        padding-bottom: 150px;
     }
 }
 @media only screen and (max-width: 350px) {
@@ -366,9 +366,9 @@ body {
         justify-items: flex-start;
         align-content: center;
         align-items: center;
-        height: 100%;
+        height: auto;
         margin: 0;
-        padding: 0 0 60px 0;
+        padding: 0 0 50px 0;
     }
     .Tilt {
         padding: 0;
@@ -400,7 +400,7 @@ body {
     }
     .Tilt {
         width: 200px;
-        height: 200px;
+        height: auto;
         .Tilt-inner {
             img {
                 width: 200px;
